<resources>
    <string name="app_name">Asclepius</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="analyze">Analyze</string>
    <string name="result">Hasil Analisis</string>
    <string name="save">Save</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="prediction">Prediction:</string>
    <string name="score">Score</string>
    <string name="remove_button">Remove Button</string>
    <string name="saved_image">Saved Image</string>
    <string name="title">Title</string>
    <string name="article_image">Article Image</string>
    <string name="description">Description</string>
    <string name="sample_image">Sample Image</string>
    <string name="article_button">Article Button</string>
    <string name="list">List</string>
    <string name="preview_image">Preview Image</string>
</resources>